Update Register Sukses dan Inputan User Berhasil di Insert kedalam Database MySQL

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,12 @@ dependencies {
     //TODO 2: Add library design for layout
     implementation 'com.android.support:design:26.1.0'
 
+    //TODO 42: Add Library Retrofit, Picasso, RetrofitGSON dll.
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'net.gotev:uploadservice:2.1'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+
 }
