--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,18 +27,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     //TODO 1: Add library compile butterknife
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //TODO 2: Add library design for layout
     implementation 'com.android.support:design:26.1.0'
 
     //TODO 42: Add Library Retrofit, Picasso, RetrofitGSON dll.
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'net.gotev:uploadservice:2.1'
-    compile 'com.squareup.picasso:picasso:2.3.2'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'net.gotev:uploadservice:2.1'
+    implementation 'com.squareup.picasso:picasso:2.3.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 
 }
