Update #2 - 28 Maret 2018 - Penambahan View Data Inventori (Belum Selesai)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserActivity"></activity>
+        <activity android:name=".UserActivity" />
+        <activity android:name=".activity.ViewInventoriActivity"></activity>
     </application>
 
 </manifest>
